setup-vpc.tf
# Create AWS VPC in ap-south-1
# CIDR - 10.0.0.0/16
resource "aws_vpc" "vpc-shamim-tf-ap-south-1" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "VPC: shamim-tf-ap-south-1"
  }
}
